force-app/main/default/objects/Look_Product_Item__c/Look_Product_Item__c.object-meta.xml
<CustomObject>
    <label>Look Product Item</label>
    <nameField>
        <label>Look Product Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Look Product Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>