force-app/main/default/objects/Look_Product_Item__c/fields/Akamai_Custom_Image__c.field-meta.xml
<CustomField>
    <fullName>Akamai_Custom_Image__c</fullName>
    <label>Akamai Custom Image</label>
    <type>Url</type>
</CustomField>