force-app/main/default/objects/Look_Product_Item__c/fields/Look__c.field-meta.xml
<CustomField>
    <fullName>Look__c</fullName>
    <label>Look</label>
    <referenceTo>Look__c</referenceTo>
    <relationshipLabel>Look Product Items</relationshipLabel>
    <relationshipName>Look_Product_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>