force-app/main/default/objects/Look_Product_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>ProductReferential__c</referenceTo>
    <relationshipLabel>Look Product Items</relationshipLabel>
    <relationshipName>Look_Product_Items</relationshipName>
    <type>Lookup</type>
</CustomField>